...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconContentDescription="Subject icon"
                app:startIconDrawable="@drawable/ic_baseline_subject_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_subject_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/subject_input_hint"
                    android:inputType="textAutoCorrect"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_subject"
                app:startIconContentDescription="Location icon"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                <AutoCompleteTextView
                    android:id="@+id/input_room_autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/input_room_hint"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_room"
                app:startIconContentDescription="Date icon"
                app:startIconDrawable="@drawable/ic_baseline_date_range_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/create_input_date_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/input_date_hint"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:startIconContentDescription="Time icon"
                    app:startIconDrawable="@drawable/ic_baseline_access_time_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_input_start_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/input_start_hint"
                        android:inputType="time" />
                </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:startIconContentDescription="Time icon"
                    app:startIconDrawable="@drawable/ic_baseline_access_time_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_input_end_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/input_end_hint"
                        android:inputType="time" />
                </com.google.android.material.textfield.TextInputLayout>
...
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_participants"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                app:endIconContentDescription="Add participant"
                app:endIconDrawable="@drawable/ic_baseline_add_circle_outline_24"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_time"
                app:startIconContentDescription="Participants icon"
                app:startIconDrawable="@drawable/ic_baseline_people_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_participants_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_participants_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress|textAutoCorrect"
                    android:singleLine="true" />
...
