...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_filter_title"
        app:startIconContentDescription="Date icon"
        app:startIconDrawable="@drawable/ic_baseline_date_range_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_filter_input_date_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/input_date_hint"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>
...
            app:endIconDrawable="@drawable/ic_baseline_remove_circle_outline_24"
            app:endIconMode="custom"
            app:startIconContentDescription="Time icon"
            app:startIconDrawable="@drawable/ic_baseline_access_time_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_filter_input_start_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/date_filter_start_input"
                android:inputType="time" />
        </com.google.android.material.textfield.TextInputLayout>
...
            app:endIconDrawable="@drawable/ic_baseline_remove_circle_outline_24"
            app:endIconMode="custom"
            app:startIconContentDescription="Time icon"
            app:startIconDrawable="@drawable/ic_baseline_access_time_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_filter_input_end_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/date_filter_end_input"
                android:inputType="time" />
        </com.google.android.material.textfield.TextInputLayout>
...
