...
    android:id="@+id/item_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/item_icon_desc"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:id="@+id/item_info_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/item_icon"
        app:layout_constraintEnd_toStartOf="@id/item_delete_button"
        app:layout_constraintStart_toEndOf="@id/item_icon"
        app:layout_constraintTop_toTopOf="@id/item_icon">

        <TextView
            android:id="@+id/item_subject"
            android:layout_width="wrap_content"
...
